--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             color: #333;
             margin: 0;
             padding: 0;
+            padding-bottom: 50px;
         }
         header {
             text-align: center;
